
Tue Aug 29 14:14:26 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in, .Sanitize, ser_{actx,adata,addr,auth,cksum,ctx,eblk,key,
		princ}.c, serialize.c, t_ser.c - Add serialization operations
		for data structures required to serialize krb5_context, krb5_
		auth_context, krb5_encrypt_block and krb5_principal.
	* auth_con.h - Add magic number.
	* auth_con.c - Add static routine to copy an address and use this
		instead of the other code.  Set the magic number when initing
		an auth_context.  Use krb5_free_address to release an address.
	* init_ctx.c - Free the allocated serializers when releasing context.
	* rd_rep.c - Copy the keyblock from the message instead of setting
		a pointer into it.

Thu Aug 24 18:55:50 1995  Theodore Y. Ts'o  <tytso@dcl>

	* .Sanitize: Update file list.

Mon Aug  7 18:54:35 1995  Theodore Y. Ts'o  <tytso@dcl>

	* in_tkt_ktb.c (keytab_keyproc): If there is an error looking up
		the key, make sure the keytab is closed as part of the
		cleanup. 

Fri Aug  4 22:04:08 1995  Tom Yu  <tlyu@dragons-lair.MIT.EDU>

	* conv_princ.c: Add braces to initializer to shut up gcc -Wall

Fri Jul 7 16:31:06 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Find com_err in TOPLIBD.
	* rd_safe.c - Use checksum verifier instead of doing it manually.

Thu Jul  6 17:31:40 1995  Tom Yu  <tlyu@lothlorien.MIT.EDU>

	* rd_safe.c (krb5_rd_safe_basic): Pass context to os_localaddr.

	* rd_priv.c (krb5_rd_priv_basic): Pass context to os_localaddr.

	* rd_cred.c (krb5_rd_cred_basic): Pass context to os_localaddr.

	* get_in_tkt.c (krb5_get_in_tkt): Pass context to os_localaddr.

Wed July  5 15:52:31 1995  James Mattly  <mattly@fusion.com>
	* added condition for _MACINTOSH

Sun Jul  2 18:59:53 1995  Sam Hartman  <hartmans@tertius.mit.edu>

	* recvauth.c (krb5_recvauth): recvauth should send an error reply
        if problem is not zero. Removed if that caused it to only send a
        reply on success.

Fri Jun 16 22:11:21 1995  Theodore Y. Ts'o  (tytso@dcl)
